# IU3QEZ-Keyer

./: .gitignore  .gitmodules  README.md  sdkconfig.defaults
bootloader/: FACTORY_RESET.TXT  README.TXT
components/app/: CMakeLists.txt  application_controller.cpp  boot_failure_tracker.cpp  bootloader_entry.cpp  init_phases.cpp  init_pipeline.cpp  usb_early_init.cpp
components/app/include/app/: application_controller.hpp  boot_failure_tracker.hpp  bootloader_entry.hpp  init_phase.hpp  init_phases.hpp  usb_early_init.hpp  version.hpp
components/audio_subsystem/: CMakeLists.txt  audio_stream_player.cpp  audio_subsystem.cpp  esp_codec_driver.cpp  sidetone_service.cpp  tone_generator.cpp
components/audio_subsystem/include/audio/: alaw_codec.hpp  audio_stream_player.hpp  codec_driver.hpp  raii_handles.hpp  sidetone_service.hpp  tone_generator.hpp
components/audio_subsystem/include/audio_subsystem/: audio_subsystem.hpp
components/captive_portal/: CMakeLists.txt  captive_portal_manager.cpp  dns_server.cpp  minimal_http_server.cpp  setup_page.cpp
components/captive_portal/include/captive_portal/: captive_portal_manager.hpp  dns_server.hpp  minimal_http_server.hpp
components/config/: CMakeLists.txt  keying_presets.cpp  parameter_registry.cpp  parameter_table.cpp  parameters.yaml  parameters_schema.json  storage.cpp
components/config/include/config/: device_config.hpp  keying_presets.hpp  parameter_metadata.hpp  parameter_registry.hpp  wifi_secrets.h.example
components/config/scripts/: generate_parameters.py
components/diagnostics_subsystem/: CMakeLists.txt  diagnostics_subsystem.cpp  led_driver.cpp
components/diagnostics_subsystem/include/diagnostics_subsystem/: diagnostics_subsystem.hpp  led_driver.hpp
components/keyer_hal/: CMakeLists.txt  high_precision_clock.cpp  paddle_hal.cpp  tx_hal.cpp
components/keyer_hal/include/hal/: high_precision_clock.hpp  paddle_hal.hpp  tx_hal.hpp
components/keying/: CMakeLists.txt  paddle_engine.cpp
components/keying/include/keying/: paddle_engine.hpp
components/keying_subsystem/: CMakeLists.txt  README.md  keying_subsystem.cpp
components/keying_subsystem/include/keying_subsystem/: keying_subsystem.hpp
components/morse_decoder/: CMakeLists.txt  adaptive_timing_classifier.cpp  morse_decoder.cpp  morse_encoder.cpp  morse_table.cpp
components/morse_decoder/include/morse_decoder/: adaptive_timing_classifier.hpp  morse_decoder.hpp  morse_encoder.hpp  morse_table.hpp  timing_stats.hpp
components/remote/: CMakeLists.txt  remote_cw_client.cpp  remote_cw_server.cpp
components/remote/include/remote/: remote_cw_client.hpp  remote_cw_server.hpp
components/system_monitor/: CMakeLists.txt  system_monitor.cpp
components/system_monitor/include/system_monitor/: system_monitor.hpp
components/text_keyer/: CMakeLists.txt  text_keyer.cpp
components/text_keyer/include/text_keyer/: text_keyer.hpp
components/timeline/: CMakeLists.txt  event_logger.cpp  timeline_event_emitter.cpp
components/timeline/include/timeline/: event_logger.hpp  timeline_event_emitter.hpp  timeline_hooks.hpp
components/ui/: CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.hpp  InputHandler.cpp  InputHandler.hpp  OutputBuffer.cpp  OutputBuffer.hpp  console_commands.cpp  console_parameter_bridge.cpp  console_system_commands.cpp  http_server.cpp  serial_console.cpp  timeline_api_handlers.cpp  web_assets.cpp
components/ui/include/ui/: console_parameter_bridge.hpp  console_system_commands.hpp  generated_log_tags.hpp  http_server.hpp  serial_console.hpp  web_assets.hpp
components/wifi_subsystem/: CMakeLists.txt  README.md  wifi_subsystem.cpp
components/wifi_subsystem/include/wifi_subsystem/: wifi_subsystem.hpp
docs/: BUG_REPORT_RemoteCwClient_Architecture.md  CHANGELOG.md  CHANGELOG.md.1  CONSOLE.md  DEVELOPMENT.md  DEVELOPMENT.md.1  FIRMWARE_UPDATE.md  NVS_RECOVERY.md  REMOTE_KEYING.md  RemoteCwNetProtocol.md  TIMELINE_HOOKS.md  WEB_UI_API_SPECIFICATION.md  WIFI_EXPLORATION_REPORT.md  console_parameter_metadata_todo.md  journal.md  journal.md.1  state_machine.py  style.md
docs/plans/: 2025-11-14-remote-audio-streaming.md  2025-11-15-remotecw-task-architecture-design.md
docs/reference/: CwNet.c
docs/testing/: remote-audio-streaming-validation.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
scripts/audio/: generate_sidetone_wav.py
scripts/hil/: requirements.md
scripts/webui/: embed_assets.py
tests_host/: CMakeLists.txt  audio_stream_player_test.cpp  dns_server_test.cpp  high_precision_clock_test.cpp  init_pipeline_test.cpp  paddle_engine_test.cpp  paddle_hal_test.cpp  parameter_metadata_test.cpp  sidetone_service_test.cpp  status_led_test.cpp  storage_test.cpp  test_adaptive_timing_classifier.cpp  test_morse_decoder.cpp  test_morse_table.cpp
tests_host/stubs/: cJSON.cpp  cJSON.h  esp_attr.h  esp_check.h  esp_codec_dev.h  esp_err.h  esp_idf_stubs.cpp  esp_io_expander.h  esp_io_expander_tca95xx_16bit.h  esp_log.h  led_strip.h  nvs.h
tests_host/stubs/driver/: gpio.h  i2c_master.h  i2c_types.h  i2s_std.h  i2s_types.h
tests_host/stubs/freertos/: FreeRTOS.h  portmacro.h  task.h
tests_host/support/: fake_codec_factory.cpp  fake_esp_idf.hpp
tools/: README.md  WIRESHARK_DEBUGGING.md  capture_and_compare.sh  compare_morse_captures.py  cwnet_dissector.lua  generate_log_tags.py  test_installation.sh
webui/: .gitignore  MIGRATION_TODO.md  README.md  build.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/css/: timeline.css
webui/src/: App.svelte
webui/src/components/: ParameterInput.svelte  ParameterInput.test.ts  ParameterSection.svelte  StatusBanner.svelte
webui/src/lib/: api.test.ts  api.ts  types.ts  validators.test.ts  validators.ts
webui/src/pages/: Config.svelte  Decoder.svelte  FirmwareUpdate.svelte  Home.svelte  Keyer.svelte  Remote.svelte  System.svelte  Timeline.svelte
webui/src/stores/: config.test.ts  config.ts
