idf_component_register(SRCS "main.cpp"
                       INCLUDE_DIRS "."
                       REQUIRES nvs_flash
                                driver
                                config
                                keyer_hal
                                keying
                                timeline
                                audio_subsystem
                                remote
                                app)

target_compile_features(${COMPONENT_LIB} PUBLIC cxx_std_17)
